# meeting-minutes

./: .gitignore  README.md  config.example.yaml  pyproject.toml
examples/: AcmeCorp 2026.01.15.md
examples/_Glossary/: AcmeCorp.md
meeting_minutes/: classify.py  cloud_stt.py  config.py  gather.py  keywords.py  notebooklm.py  notebooklm_minutes.py  notebooklm_prompt.md  notebooklm_scan.py  prompt.md  run.py  transcribe.py
tests/: test_basic.py  test_nbscan.py
